--- a/src/konwentor/gameborrow/templates/add.jinja2
+++ b/src/konwentor/gameborrow/templates/add.jinja2
@@ -19,6 +19,7 @@
                                 {{form.error()}}
                                 {{form.hidden('game_entity_id')}}
                                 {{form.text('name')}}
+                                {{form.select('document')}}
                                 {{form.submit('Wypożycz')}}
                             {{form.end()}}
                         </div>
